<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.1"/>
 <de.hdodenhof.circleimageview.CircleImageView
   android:id="@+id/face_img"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:src="@drawable/face"
     app:layout_constraintWidth_percent="0.5"
     app:layout_constraintHeight_percent="0.2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/guideline"/>



  <EditText
      android:id="@+id/email_txt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:hint="Email"
      app:layout_constraintTop_toBottomOf="@id/face_img"
      tools:layout_editor_absoluteX="0dp" />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:hint="@string/password"
      app:layout_constraintTop_toBottomOf="@id/email_txt"
      tools:layout_editor_absoluteX="19dp" />

  <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:hint="@string/login"
        android:backgroundTint="@color/purple_500"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="@color/white"
        android:text="@string/forget_password"
        android:textSize="10dp"
        android:textColor="@color/purple_500"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/forget_password"
        android:text="@string/or"
        android:layout_marginTop="20dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/creat_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/or"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/creat_new_account"
        android:textColor="@color/white"
        android:textSize="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>