<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/post_card"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/_11sdp"
        app:cardElevation="@dimen/_4sdp"
        android:layout_margin="@dimen/_5sdp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_img"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/proff"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/user_name"
                app:layout_constraintTop_toTopOf="@+id/user_img"
                app:layout_constraintBottom_toBottomOf="@+id/user_img"
                app:layout_constraintStart_toEndOf="@+id/user_img"
                android:text="@string/saharnayle"
                android:textSize="18dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/post_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginTop="24dp"
                android:text="@string/_12hrs"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toEndOf="@id/user_img"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                app:layout_constraintTop_toTopOf="@id/user_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/post_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/user_img"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/Gizapyramids"
                android:textSize="@dimen/_13ssp"
                android:textStyle="italic"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/black"/>
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/post_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="fitXY"
                android:src="@drawable/py"
                app:layout_constraintTop_toBottomOf="@id/post_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/icon_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/post_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.3"
                android:text="@string/like"
                app:icon="@drawable/icon_like_svg"
                android:backgroundTint="#bebebe"
                android:textAllCaps="false"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/icon_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/post_img"
                app:layout_constraintStart_toEndOf="@id/icon_like"
                app:layout_constraintWidth_percent="0.4"
                android:text="@string/comment"
                app:icon="@drawable/ic__comment_svg"
                android:backgroundTint="#bebebe"
                android:textAllCaps="false"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/icon_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/post_img"
                app:layout_constraintStart_toEndOf="@id/icon_comment"
                app:layout_constraintWidth_percent="0.3"
                android:text="@string/share"
                app:icon="@drawable/icon_share_svg"
                android:backgroundTint="#bebebe"
                android:textAllCaps="false"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/black"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>













</androidx.constraintlayout.widget.ConstraintLayout>